crates/kul-core/tests/snapshots/validator__rule_05_reason_without_end.snap
---
source: crates/kul-core/tests/validator.rs
assertion_line: 286
expression: render_diagnostics(&result.diagnostics)
---
KUL-R05 [127..145]: marriage `m_alice_bob` has an `end_reason:` but no `end:` date — add an `end:` date or remove this field
