crates/kul-core/tests/snapshots/validator__rule_06_died_before_born.snap
---
source: crates/kul-core/tests/validator.rs
expression: render_diagnostics(&result.diagnostics)
---
KUL-R06 [49..59]: person `zombie` died before they were born
  related [33..43]: born here
