crates/kul-core/tests/snapshots/validator__rule_08_adoption_end_before_start.snap
---
source: crates/kul-core/tests/validator.rs
expression: render_diagnostics(&result.diagnostics)
---
KUL-R08 [160..170]: adoption of `ravi` (by marriage `m_alice_bob`) ended before it began
  related [145..155]: started here
