crates/kul-core/tests/snapshots/validator__rule_11_child_born_before_parent.snap
---
source: crates/kul-core/tests/validator.rs
assertion_line: 265
expression: render_diagnostics(&result.diagnostics)
---
KUL-R09 [224..234]: marriage `m_alice_bob` started before spouse `alice` was born
  related [31..41]: `alice` born here
KUL-R09 [224..234]: marriage `m_alice_bob` started before spouse `bob` was born
  related [87..97]: `bob` born here
KUL-R11 [141..151]: `carol` was born before their biological parent `alice`
  related [31..41]: `alice` born here
KUL-R11 [141..151]: `carol` was born before their biological parent `bob`
  related [87..97]: `bob` born here
