crates/kul-core/tests/snapshots/validator__rule_13_mixed_bio_adoption.snap
---
source: crates/kul-core/tests/validator.rs
assertion_line: 314
expression: render_diagnostics(&result.diagnostics)
---
KUL-R13 [151..156]: parent-link cycle: `alice` → `carol` → `alice` — one of these `birth` or `adoption` links must be wrong
  related [192..203]: parent link in the cycle
  related [293..305]: parent link in the cycle
