crates/kul-core/tests/snapshots/validator__rule_13_self_parent.snap
---
source: crates/kul-core/tests/validator.rs
assertion_line: 300
expression: render_diagnostics(&result.diagnostics)
---
KUL-R13 [162..167]: `alice` ends up as their own ancestor — check the `birth` and `adoption` links
  related [203..214]: parent link in the cycle
